Add Render deployment configuration and documentation
- Add deployment guide (DEPLOYMENT.md) with Render-specific instructions
- Add Render configuration files (render.yaml, Procfile, runtime.txt)
- Update API server to support production deployment (PORT env var, debug mode)
- Update frontend to auto-detect API URL in production
- Update README with deployment section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -543,8 +543,8 @@
 
         <div class="api-config">
             <label for="api-base">API Base URL:</label>
-            <input type="text" id="api-base" value="http://localhost:5001/api" placeholder="http://localhost:5001/api">
-            <small>Change this if your backend is running on a different URL. Default is 5001.</small>
+            <input type="text" id="api-base" value="" placeholder="http://localhost:5001/api">
+            <small>Enter your backend API URL. For local development, use http://localhost:5001/api</small>
         </div>
 
         <div id="status-message" class="status-message" style="display: none;"></div>
@@ -673,7 +673,22 @@
     </div>
 
     <script>
-        const API_BASE = document.getElementById('api-base').value;
+        // Get API base URL from environment or default to localhost
+        function getDefaultApiBase() {
+            // Check if we're in a deployed environment (window.location.hostname is not localhost)
+            const hostname = window.location.hostname;
+            if (hostname && hostname !== 'localhost' && hostname !== '127.0.0.1') {
+                // In production, use the same origin as the frontend
+                return window.location.origin + '/api';
+            }
+            // Default to localhost for local development
+            return 'http://localhost:5001/api';
+        }
+
+        // Initialize API base input with default value
+        const apiBaseInput = document.getElementById('api-base');
+        apiBaseInput.value = getDefaultApiBase();
+
         let currentExperimentId = null;
         let experimentStatusInterval = null;
         let experiments = [];
@@ -682,13 +697,14 @@
         let comparisonData = [];
 
         // Update API base when changed
-        document.getElementById('api-base').addEventListener('change', function() {
+        apiBaseInput.addEventListener('change', function() {
             window.API_BASE = this.value;
         });
-        window.API_BASE = API_BASE;
+        window.API_BASE = apiBaseInput.value;
 
         function getApiBase() {
-            return document.getElementById('api-base').value || 'http://localhost:5001/api';
+            const inputValue = document.getElementById('api-base').value.trim();
+            return inputValue || getDefaultApiBase();
         }
 
         function showStatusMessage(type, text) {
