--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,10 +44,6 @@
             margin-bottom: 5px;
         }
 
-        .header p {
-            font-size: 1.1em;
-            opacity: 0.9;
-        }
 
         .github-link {
             display: inline-flex;
@@ -543,8 +539,8 @@
 
         <div class="api-config">
             <label for="api-base">API Base URL:</label>
-            <input type="text" id="api-base" value="" placeholder="http://localhost:5001/api">
-            <small>Enter your backend API URL. For local development, use http://localhost:5001/api</small>
+            <input type="text" id="api-base" value="" placeholder="">
+            <small id="api-help-text">Enter your backend API URL. For local development, use http://localhost:5001/api</small>
         </div>
 
         <div id="status-message" class="status-message" style="display: none;"></div>
@@ -675,19 +671,37 @@
     <script>
         // Get API base URL from environment or default to localhost
         function getDefaultApiBase() {
-            // Check if we're in a deployed environment (window.location.hostname is not localhost)
+            // Check if we're in local development
             const hostname = window.location.hostname;
-            if (hostname && hostname !== 'localhost' && hostname !== '127.0.0.1') {
-                // In production, use the same origin as the frontend
-                return window.location.origin + '/api';
+            if (hostname === 'localhost' || hostname === '127.0.0.1') {
+                // Default to localhost for local development
+                return 'http://localhost:5001/api';
             }
-            // Default to localhost for local development
-            return 'http://localhost:5001/api';
+            // In production (deployed), use the production backend URL
+            return 'https://llm-role-framing.onrender.com/api';
         }
 
         // Initialize API base input with default value
         const apiBaseInput = document.getElementById('api-base');
-        apiBaseInput.value = getDefaultApiBase();
+        const apiHelpText = document.getElementById('api-help-text');
+        const hostname = window.location.hostname;
+        const defaultApiBase = getDefaultApiBase();
+        apiBaseInput.value = defaultApiBase;
+        
+        // Update placeholder and help text based on environment
+        if (hostname === 'localhost' || hostname === '127.0.0.1') {
+            // Local development: show localhost placeholder
+            apiBaseInput.placeholder = 'http://localhost:5001/api';
+            if (apiHelpText) {
+                apiHelpText.textContent = 'Enter your backend API URL. For local development, use http://localhost:5001/api';
+            }
+        } else {
+            // Production: backend URL is pre-filled, show info
+            apiBaseInput.placeholder = 'https://llm-role-framing.onrender.com/api';
+            if (apiHelpText) {
+                apiHelpText.textContent = 'Backend API URL (automatically configured for production)';
+            }
+        }
 
         let currentExperimentId = null;
         let experimentStatusInterval = null;
@@ -696,11 +710,7 @@
         let selectedForComparison = [];
         let comparisonData = [];
 
-        // Update API base when changed
-        apiBaseInput.addEventListener('change', function() {
-            window.API_BASE = this.value;
-        });
-        window.API_BASE = apiBaseInput.value;
+        // Update API base when changed (no need to store in window, getApiBase() reads from input)
 
         function getApiBase() {
             const inputValue = document.getElementById('api-base').value.trim();
@@ -1336,14 +1346,6 @@
             }
         }
 
-        function deselectAll(selectId) {
-            const select = document.getElementById(selectId);
-            if (select) {
-                Array.from(select.options).forEach(option => {
-                    option.selected = false;
-                });
-            }
-        }
 
         // Load experiments on page load
         loadExperiments();
